add eslint, remove debug msg

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,27 +1,3 @@
 {
-    "parserOptions": {
-        "ecmaVersion": 6,
-        "sourceType": "module",
-        "ecmaFeatures": {
-            "jsx": true
-        }
-    },
-    "extends": [
-        "eslint:recommended"
-    ],
-    "rules": {
-        "semi": 2,
-        "no-const-assign": 2,
-        "no-console": 0,
-        "no-unused-vars": [ "error", { "argsIgnorePattern": "^_" }]
-    },
-    "env": {
-        "browser": true,
-        "node": true
-    },
-    "globals": {
-        "Uint8Array": true,
-        "Float32Array": true,
-        "Promise": true
-    }
+    "extends": "standard"
 }
